<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>body_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for Hospibot body components</description>
  <maintainer email="chandrahas.kasoju@uni-luebeck.de">Chandrahas Kasoju</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>hospibot_teleop</exec_depend>
  <exec_depend>hospibot_led</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
